# my7vpn

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  auth.py  bot.py  commands.py  db.py  docker-compose.prod.yml  docker-compose.yml  handlers.py  ioc.py  main.py  main_bot.py  main_web.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 19076f24ca2f_add_pending_payments_table.py  2d2e832aa2e3_fix_referred_by.py  6ca557745136_add_remnawave_uuid_and_subscription_url_.py  76e503977643_add_notification_log.py  852024dfadfe_add_device_limit_to_devices_and_pending_.py  a1b2c3d4e5f6_add_email_to_users_and_auth_tables.py  a3f8d2c1e9b0_add_user_subscriptions_and_payments.py  b2c3d4e5f6a7_add_user_id_to_payment_tables.py  b5a530407867_change_referred_by_column_to_biginteger.py  c3d4e5f6a7b8_add_status_to_pending_payments.py  c59626e2a60f_initial_migration.py  c843778f74d3_add_new_field.py  (+2 more)
config/: config_app.py
database/: db_service.py  device_service.py  models.py  user_service.py
deploy/: nginx.conf
docs/: api.md  architecture.md  bot-flows.md  bot-improvements.md  infrastructure.md  migration-remnawave.md
frontend/: index.html  package-lock.json  package.json
keyboards/: commands.py  keyboards.py  user_actions.py
lexicon/: lexicon.py  text_manager.py
logs/: app.jsonl  error.jsonl
scripts/: check_migration.sql  generate_xui_mapping.py  sync_xui_to_db.py
tests/: conftest.py
utils/: background_tasks.py  cbdata.py  files.py  keyboards.py  scheduler.py  states.py  text_manager.py  utl.py
(+164 files in other folders)
