[project]
name = "vpn-bot"
version = "0.1.0"
description = "Telegram VPN bot with FastAPI web interface"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.18.0",
    "aiofiles>=24.1.0",
    "alembic>=1.15.1",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "dishka>=1.4.0",
    "fastapi>=0.115.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.10.1",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy[asyncio]>=2.0.38",
    "uvicorn[standard]>=0.32.0",
    "structlog>=24.0",
    "psycopg2>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PLC"]

[tool.mypy]
python_version = "3.12"
strict = true
